recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps == 0)
	return
	else {
		avance(length);
		droite(angle);
		recule(lrngth);
		tree(steps-1,shrink*length,angle,shrink);
		gauche(2*angle);
		
	}
}
